fix bug for footer on small mobile screens

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -124,6 +124,7 @@ a.secondary {
 @media (max-width: 600px) {
   .page {
     padding: 32px;
+    margin-bottom: 30px;
     height: 70vh;
   }
 
